# src/rbac/rest/handler_permission_assignment.go
@@ -6,8 +6,6 @@ import (
 	"rbac-go/rbac/dblayer"
 
 	"github.com/gin-gonic/gin"
-
-	"strconv"
 )
 
 // @Summary PermissionAssignment 생성
@@ -32,50 +30,23 @@ func (h *Handler) AddPermissionAssignment(c *gin.Context) {
 	c.JSON(http.StatusOK, permissionAssignment)
 }
 
-// @Summary PermissionAssignment Update
-// @Tags RBAC permissionAssignment
-// @Accept json
-// @Produce json
-// @Param id path int  true  "PermissionAssignment ID"
-// @Param data body dblayer.PermissionAssignmentData true "Update에 사용할 Data"
-// @Success 200 {object} models.PermissionAssignment "수정된 PermissionAssignment 데이터"
-// @Router /rbac/permission-assignment/{id} [patch]
-func (h *Handler) UpdatePermissionAssignment(c *gin.Context) {
-
-	p := c.Param("id")
-	id, err := strconv.Atoi(p)
-	if ce.GinError(c, err) {
-		return
-	}
-	var permissionAssignmentData dblayer.PermissionAssignmentData
-
-	err = c.ShouldBindJSON(&permissionAssignmentData)
-	if ce.GinError(c, err) {
-		return
-	}
-
-	permissionAssignment, err := h.db.UpdatePermissionAssignment(id, permissionAssignmentData)
-	if ce.GinError(c, err) {
-		return
-	}
-	c.JSON(http.StatusOK, permissionAssignment)
-}
-
 // @Summary PermissionAssignment 삭제
 // @Tags RBAC permissionAssignment
 // @Accept json
 // @Produce json
-// @Param id path int true  "PermissionAssignment ID"
+// @Param data body dblayer.PermissionAssignmentData true "Data"
 // @Success 200 {object} models.PermissionAssignment "삭제된 PermissionAssignment 데이터"
-// @Router /rbac/permission-assignment/{id} [delete]
+// @Router /rbac/permission-assignment [delete]
 func (h *Handler) DeletePermissionAssignment(c *gin.Context) {
-	p := c.Param("id")
-	id, err := strconv.Atoi(p)
+
+	var permissionAssignmentdata dblayer.PermissionAssignmentData
+
+	err := c.ShouldBindJSON(&permissionAssignmentdata)
 	if ce.GinError(c, err) {
 		return
 	}
 
-	permissionAssignment, err := h.db.DeletePermissionAssignment(id)
+	permissionAssignment, err := h.db.DeletePermissionAssignment(permissionAssignmentdata)
 	if ce.GinError(c, err) {
 		return
 	}
