# src/rbac/rest/handler_subject_assignment.go
@@ -6,8 +6,6 @@ import (
 	"rbac-go/rbac/dblayer"
 
 	"github.com/gin-gonic/gin"
-
-	"strconv"
 )
 
 // @Summary SubjectAssignment 생성
@@ -32,52 +30,22 @@ func (h *Handler) AddSubjectAssignment(c *gin.Context) {
 	c.JSON(http.StatusOK, item)
 }
 
-// @Summary SubjectAssignment Update
-// @Tags RBAC subjectAssignment
-// @Accept json
-// @Produce json
-// @Param id path int  true  "SubjectAssignment ID"
-// @Param data body dblayer.SubjectAssignmentData true "Update에 사용할 Data"
-// @Success 200 {object} models.SubjectAssignment "수정된 SubjectAssignment 데이터"
-// @Router /rbac/subject-assignment/{id} [patch]
-func (h *Handler) UpdateSubjectAssignment(c *gin.Context) {
-
-	defer gin.Recovery()
-
-	p := c.Param("id")
-	id, err := strconv.Atoi(p)
-	if ce.GinError(c, err) {
-		return
-	}
-	var itemData dblayer.SubjectAssignmentData
-
-	err = c.ShouldBindJSON(&itemData)
-	if ce.GinError(c, err) {
-		return
-	}
-
-	item, err := h.db.UpdateSubjectAssignment(id, itemData)
-	if ce.GinError(c, err) {
-		return
-	}
-	c.JSON(http.StatusOK, item)
-}
-
 // @Summary SubjectAssignment 삭제
 // @Tags RBAC subjectAssignment
 // @Accept json
 // @Produce json
-// @Param id path int true  "SubjectAssignment ID"
+// @Param data body dblayer.SubjectAssignmentData true "Data"
 // @Success 200 {object} models.SubjectAssignment "삭제된 SubjectAssignment 데이터"
-// @Router /rbac/subject-assignment/{id} [delete]
+// @Router /rbac/subject-assignment [delete]
 func (h *Handler) DeleteSubjectAssignment(c *gin.Context) {
-	p := c.Param("id")
-	id, err := strconv.Atoi(p)
+	var subjectAssignmentData dblayer.SubjectAssignmentData
+
+	err := c.ShouldBindJSON(&subjectAssignmentData)
 	if ce.GinError(c, err) {
 		return
 	}
 
-	item, err := h.db.DeleteSubjectAssignment(id)
+	item, err := h.db.DeleteSubjectAssignment(subjectAssignmentData)
 	if ce.GinError(c, err) {
 		return
 	}
